GOVSI-871 - Parse the VTR attribute as a JSON array
- As per section 4.1 of the VoT spec https://datatracker.ietf.org/doc/html/rfc8485#section-4.1, the value of the VTR attribute must be parsed as a JSON array.
- Adapt the parsing methods to reflect this.